more sound effects

--- a/index.html
+++ b/index.html
@@ -32,5 +32,11 @@
     <audio class="quack" src="/sounds/quack.mp3"></audio>
     <audio class="liljon" src="/sounds/liljon.mp3"></audio>
     <audio class="yeah" src="./sounds/yeah.mp3"></audio>
+    <audio class="swag" src="./sounds/swag.mp3"></audio>
+    <audio class="meow" src="./sounds/meow.mp3"></audio>
+    <audio class="water" src="./sounds/water.mp3"></audio>
+    <audio class="doorbell" src="./sounds/doorbell.mp3"></audio>
+    <audio class="ea" src="./sounds/ea.mp3"></audio>
+    <audio class="rocket" src="./sounds/rocket.mp3"></audio>
   </body>
 </html>
