--- a/index.html
+++ b/index.html
@@ -38,5 +38,8 @@
     <audio class="doorbell" src="./sounds/doorbell.mp3"></audio>
     <audio class="ea" src="./sounds/ea.mp3"></audio>
     <audio class="rocket" src="./sounds/rocket.mp3"></audio>
+    <audio class="kick" src="./sounds/808.mp3"></audio>
+    <audio class="snare" src="./sounds/snare.mp3"></audio>
+    <audio class="hat" src="./sounds/hat.mp3"></audio>
   </body>
 </html>
