--- a/index.html
+++ b/index.html
@@ -41,5 +41,15 @@
     <audio class="kick" src="./sounds/808.mp3"></audio>
     <audio class="snare" src="./sounds/snare.mp3"></audio>
     <audio class="hat" src="./sounds/hat.mp3"></audio>
+    <audio class="yell" src="./sounds/yell.mp3"></audio>
+    <audio class="time" src="./sounds/time.mp3"></audio>
+    <audio class="pimp" src="./sounds/pimp.mp3"></audio>
+    <audio class="gun" src="./sounds/gun.mp3"></audio>
+    <audio class="gunit" src="./sounds/gunit.mp3"></audio>
+    <audio class="jail" src="./sounds/jail.mp3"></audio>
+    <audio class="hey" src="./sounds/hey.mp3"></audio>
+    <audio class="wub" src="./sounds/wub.mp3"></audio>
+    <audio class="meseks" src="./sounds/meseks.mp3"></audio>
+    <audio class="biatch" src="./sounds/biatch.mp3"></audio>
   </body>
 </html>
