more sounds, mostly mario

--- a/index.html
+++ b/index.html
@@ -51,5 +51,11 @@
     <audio class="wub" src="./sounds/wub.mp3"></audio>
     <audio class="meseks" src="./sounds/meseks.mp3"></audio>
     <audio class="biatch" src="./sounds/biatch.mp3"></audio>
+    <audio class="mario" src="./sounds/mario.mp3"></audio>
+    <audio class="coin" src="./sounds/coin.mp3"></audio>
+    <audio class="yahoo" src="./sounds/yahoo.mp3"></audio>
+    <audio class="jump" src="./sounds/jump.mp3"></audio>
+    <audio class="mush" src="./sounds/mush.mp3"></audio>
+    <audio class="dead" src="./sounds/dead.mp3"></audio>
   </body>
 </html>
