--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <audio class="boing2" src="/sounds/boing2.mp3"></audio>
     <audio class="moo" src="/sounds/moo.mp3"></audio>
     <audio class="airhorn" src="/sounds/airhorn.mp3"></audio>
+    <audio class="airhorn2" src="/sounds/airhorn2.mp3"></audio>
     <audio class="pikachu" src="/sounds/pikachu.mp3"></audio>
     <audio class="koolaid" src="/sounds/koolaid.mp3"></audio>
     <audio class="laser" src="/sounds/laser.mp3"></audio>
@@ -57,5 +58,14 @@
     <audio class="jump" src="./sounds/jump.mp3"></audio>
     <audio class="mush" src="./sounds/mush.mp3"></audio>
     <audio class="dead" src="./sounds/dead.mp3"></audio>
+    <audio class="mortal" src="./sounds/mortal.mp3"></audio>
+    <audio class="punch" src="./sounds/punch.mp3"></audio>
+    <audio class="echo" src="./sounds/echo.mp3"></audio>
+    <audio class="propane" src="./sounds/propane.mp3"></audio>
+    <audio class="cocaine" src="./sounds/cocaine.mp3"></audio>
+    <audio class="toot" src="./sounds/toot.mp3"></audio>
+    <audio class="laugh" src="./sounds/laugh.mp3"></audio>
+    <audio class="crank" src="./sounds/crank.mp3"></audio>
+    <audio class="witch" src="./sounds/witch.mp3"></audio>
   </body>
 </html>
