whistle and laughs

--- a/index.html
+++ b/index.html
@@ -67,5 +67,6 @@
     <audio class="laugh" src="./sounds/laugh.mp3"></audio>
     <audio class="crank" src="./sounds/crank.mp3"></audio>
     <audio class="witch" src="./sounds/witch.mp3"></audio>
+    <audio class="whistle" src="./sounds/whistle.mp3"></audio>
   </body>
 </html>
