--- a/index.html
+++ b/index.html
@@ -68,5 +68,17 @@
     <audio class="crank" src="./sounds/crank.mp3"></audio>
     <audio class="witch" src="./sounds/witch.mp3"></audio>
     <audio class="whistle" src="./sounds/whistle.mp3"></audio>
+    <audio class="excused" src="./sounds/excused.mp3"></audio>
+    <audio class="heisenberg" src="./sounds/heisenberg.mp3"></audio>
+    <audio class="fink" src="./sounds/fink.mp3"></audio>
+    <audio class="ko" src="./sounds/ko.mp3"></audio>
+    <audio class="train" src="./sounds/train.mp3"></audio>
+    <audio class="wow" src="./sounds/wow.mp3"></audio>
+    <audio class="action" src="./sounds/action.mp3"></audio>
+    <audio class="wah" src="./sounds/wah.mp3"></audio>
+    <audio class="badum" src="./sounds/badum.mp3"></audio>
+    <audio class="party" src="./sounds/party.mp3"></audio>
+    <audio class="bopit" src="./sounds/bopit.mp3"></audio>
+    <audio class="nick" src="./sounds/nick.mp3"></audio>
   </body>
 </html>
