--- a/index.html
+++ b/index.html
@@ -80,5 +80,7 @@
     <audio class="party" src="./sounds/party.mp3"></audio>
     <audio class="bopit" src="./sounds/bopit.mp3"></audio>
     <audio class="nick" src="./sounds/nick.mp3"></audio>
+    <audio class="tegridy" src="./sounds/tegridy.mp3"></audio>
+    <audio class="panda" src="./sounds/panda.mp3"></audio>
   </body>
 </html>
