cap letters starting to fill in

--- a/index.html
+++ b/index.html
@@ -82,5 +82,13 @@
     <audio class="nick" src="./sounds/nick.mp3"></audio>
     <audio class="tegridy" src="./sounds/tegridy.mp3"></audio>
     <audio class="panda" src="./sounds/panda.mp3"></audio>
+    <audio class="iverson" src="./sounds/iverson.mp3"></audio>
+    <audio class="nelson" src="./sounds/nelson.mp3"></audio>
+    <audio class="homer" src="./sounds/homer.mp3"></audio>
+    <audio class="griffin" src="./sounds/griffin.mp3"></audio>
+    <audio class="kaching" src="./sounds/kaching.mp3"></audio>
+    <audio class="arriba" src="./sounds/arriba.mp3"></audio>
+    <audio class="woody" src="./sounds/woody.mp3"></audio>
+    <audio class="hummus" src="./sounds/hummus.mp3"></audio>
   </body>
 </html>
