--- a/index.html
+++ b/index.html
@@ -90,5 +90,7 @@
     <audio class="arriba" src="./sounds/arriba.mp3"></audio>
     <audio class="woody" src="./sounds/woody.mp3"></audio>
     <audio class="hummus" src="./sounds/hummus.mp3"></audio>
+    <audio class="karate" src="./sounds/karate.mp3"></audio>
+    <audio class="chicken" src="./sounds/chicken.mp3"></audio>
   </body>
 </html>
