--- a/index.html
+++ b/index.html
@@ -92,5 +92,6 @@
     <audio class="hummus" src="./sounds/hummus.mp3"></audio>
     <audio class="karate" src="./sounds/karate.mp3"></audio>
     <audio class="chicken" src="./sounds/chicken.mp3"></audio>
+    <audio class="howdy" src="./sounds/howdy.mp3"></audio>
   </body>
 </html>
