--- a/index.html
+++ b/index.html
@@ -93,5 +93,6 @@
     <audio class="karate" src="./sounds/karate.mp3"></audio>
     <audio class="chicken" src="./sounds/chicken.mp3"></audio>
     <audio class="howdy" src="./sounds/howdy.mp3"></audio>
+    <audio class="woohoo" src="./sounds/woohoo.mp3"></audio>
   </body>
 </html>
