--- a/index.html
+++ b/index.html
@@ -94,5 +94,6 @@
     <audio class="chicken" src="./sounds/chicken.mp3"></audio>
     <audio class="howdy" src="./sounds/howdy.mp3"></audio>
     <audio class="woohoo" src="./sounds/woohoo.mp3"></audio>
+    <audio class="kiss" src="./sounds/kiss.mp3"></audio>
   </body>
 </html>
