--- a/index.html
+++ b/index.html
@@ -95,5 +95,6 @@
     <audio class="howdy" src="./sounds/howdy.mp3"></audio>
     <audio class="woohoo" src="./sounds/woohoo.mp3"></audio>
     <audio class="kiss" src="./sounds/kiss.mp3"></audio>
+    <audio class="cuckoo" src="./sounds/cuckoo.mp3"></audio>
   </body>
 </html>
