stupid meme sfx

--- a/index.html
+++ b/index.html
@@ -96,5 +96,6 @@
     <audio class="woohoo" src="./sounds/woohoo.mp3"></audio>
     <audio class="kiss" src="./sounds/kiss.mp3"></audio>
     <audio class="cuckoo" src="./sounds/cuckoo.mp3"></audio>
+    <audio class="stupid" src="./sounds/stupidmeme.mp3"></audio>
   </body>
 </html>
