winner sound effect

--- a/index.html
+++ b/index.html
@@ -97,5 +97,6 @@
     <audio class="kiss" src="./sounds/kiss.mp3"></audio>
     <audio class="cuckoo" src="./sounds/cuckoo.mp3"></audio>
     <audio class="stupid" src="./sounds/stupidmeme.mp3"></audio>
+    <audio class="winner" src="./sounds/winner.mp3"></audio>
   </body>
 </html>
